--- a/react/iframe-link/package.json
+++ b/react/iframe-link/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "laptop-holder",
+    "name": "iframe-link",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://app-store.bitbybit.dev/iframe-link",
